--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,4 @@
 asgiref==3.5.0
-Django==4.0.4
-sqlparse==0.4.2
-asgiref==3.5.0
 beautifulsoup4==4.10.0
 boto==2.49.0
 boto3==1.21.33
@@ -10,8 +7,8 @@ cachetools==5.0.0
 certifi==2021.10.8
 charset-normalizer==2.0.12
 dj-database-url==0.5.0
-
-
+Django==4.0.4
+django-heroku==0.3.1
 django-storages==1.12.3
 djangorestframework==3.13.1
 google-api-core==2.7.1
@@ -43,4 +40,4 @@ soupsieve==2.3.1
 sqlparse==0.4.2
 uritemplate==4.1.1
 urllib3==1.26.9
-
+whitenoise==6.0.0
