--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ certifi==2021.10.8
 charset-normalizer==2.0.12
 dj-database-url==0.5.0
 Django==4.0.4
+django-dotenv==1.4.2
 django-heroku==0.3.1
 django-storages==1.12.3
 djangorestframework==3.13.1
