--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "react/index.js",
   "license": "MIT",
   "dependencies": {
     "react": "^18.1.0",
